--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -57,7 +57,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/photos_rc"
                     android:layout_width="wrap_content"
-                    android:layout_height="90dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/maps"
                     android:layout_marginTop="13dp"
                     android:layout_marginLeft="20dp"
@@ -67,7 +67,7 @@
                     android:id="@+id/maps_rc"
                     android:layout_width="wrap_content"
                     android:visibility="gone"
-                    android:layout_height="90dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/maps"
                     android:layout_marginTop="13dp"
                     android:layout_marginLeft="20dp"
@@ -394,6 +394,7 @@
                 android:background="@color/white">
 
                 <TextView
+                    android:id="@+id/sealife_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -403,37 +404,37 @@
                     android:textColor="@color/black_text"
                     android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/add_sealife_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="87dp"
-                    android:text="@string/add_sealife"
-                    android:textColor="#b2b2b2"
-                    android:textSize="14sp" />
-
-                <ImageView
-                    android:id="@+id/btn_add_sealife"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:paddingRight="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:scaleType="fitCenter"
-                    android:paddingLeft="15dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_addds_plus" />
-
                 <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="5dp"
                     android:id="@+id/sealifes_rc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/btn_add_sealife"
-                    android:layout_marginBottom="15dp"
+                    android:layout_below="@+id/sealife_title"
                     android:layout_marginLeft="20dp"
                     android:visibility="visible" />
+                <LinearLayout
+                    android:id="@+id/btn_add_sealife"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_below="@+id/sealifes_rc"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/gray_rectangle"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_addds_plus"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_sea_life"
+                        android:textColor="#a9a9a9"
+                        android:layout_marginLeft="7dp"/>
+                </LinearLayout>
             </RelativeLayout>
 
             <ImageView style="@style/DividerStyle" />
