--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="primary_dark">#074E69</color>
     <color name="primary_light">#C8E6C9</color>
     <color name="empty_buttons">#2e80a0</color>
+    <color name="radio_button_fill">#2d80a1</color>
+    <color name="radio_button_empty">#7b797a</color>
 
     <color name="green_100">#C8E6C9</color>
     <color name="green_600">#43A047</color>
