--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
 <resources>
 
     <!--Green-->
-    <color name="primary">#095370</color>
+    <color name="primary">#115b97</color>
     <color name="secondary">#1565C0</color>
-    <color name="primary_dark">#074E69</color>
+    <color name="primary_dark">#07518e</color>
     <color name="primary_light">#C8E6C9</color>
     <color name="empty_buttons">#2e80a0</color>
     <color name="radio_button_fill">#2d80a1</color>
