--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#f6f6f6">
 
     <include
         android:id="@+id/top"
@@ -55,8 +55,10 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:visibility="gone"
-        android:background="@color/white"
+        android:background="#f6f6f6"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
